--- a/SwampAttack/Resources/image/MuroideaAttack.plist
+++ b/SwampAttack/Resources/image/MuroideaAttack.plist
@@ -4,7 +4,7 @@
     <dict>
         <key>frames</key>
         <dict>
-            <key>Muroidea_attack0001.png</key>
+            <key>muroidea_attack0001.png</key>
             <dict>
                 <key>frame</key>
                 <string>{{2,140},{124,136}}</string>
@@ -17,7 +17,7 @@
                 <key>sourceSize</key>
                 <string>{190,190}</string>
             </dict>
-            <key>Muroidea_attack0002.png</key>
+            <key>muroidea_attack0002.png</key>
             <dict>
                 <key>frame</key>
                 <string>{{140,258},{124,134}}</string>
@@ -30,7 +30,7 @@
                 <key>sourceSize</key>
                 <string>{190,190}</string>
             </dict>
-            <key>Muroidea_attack0003.png</key>
+            <key>muroidea_attack0003.png</key>
             <dict>
                 <key>frame</key>
                 <string>{{2,384},{126,130}}</string>
@@ -43,7 +43,7 @@
                 <key>sourceSize</key>
                 <string>{190,190}</string>
             </dict>
-            <key>Muroidea_attack0004.png</key>
+            <key>muroidea_attack0004.png</key>
             <dict>
                 <key>frame</key>
                 <string>{{134,384},{120,130}}</string>
@@ -56,7 +56,7 @@
                 <key>sourceSize</key>
                 <string>{190,190}</string>
             </dict>
-            <key>Muroidea_attack0005.png</key>
+            <key>muroidea_attack0005.png</key>
             <dict>
                 <key>frame</key>
                 <string>{{2,266},{116,134}}</string>
@@ -69,7 +69,7 @@
                 <key>sourceSize</key>
                 <string>{190,190}</string>
             </dict>
-            <key>Muroidea_attack0006.png</key>
+            <key>muroidea_attack0006.png</key>
             <dict>
                 <key>frame</key>
                 <string>{{182,2},{176,138}}</string>
@@ -82,7 +82,7 @@
                 <key>sourceSize</key>
                 <string>{190,190}</string>
             </dict>
-            <key>Muroidea_attack0007.png</key>
+            <key>muroidea_attack0007.png</key>
             <dict>
                 <key>frame</key>
                 <string>{{2,2},{178,136}}</string>
@@ -95,7 +95,7 @@
                 <key>sourceSize</key>
                 <string>{190,190}</string>
             </dict>
-            <key>Muroidea_attack0008.png</key>
+            <key>muroidea_attack0008.png</key>
             <dict>
                 <key>frame</key>
                 <string>{{278,240},{112,136}}</string>
@@ -108,7 +108,7 @@
                 <key>sourceSize</key>
                 <string>{190,190}</string>
             </dict>
-            <key>Muroidea_attack0009.png</key>
+            <key>muroidea_attack0009.png</key>
             <dict>
                 <key>frame</key>
                 <string>{{140,142},{114,136}}</string>
@@ -121,7 +121,7 @@
                 <key>sourceSize</key>
                 <string>{190,190}</string>
             </dict>
-            <key>Muroidea_attack0010.png</key>
+            <key>muroidea_attack0010.png</key>
             <dict>
                 <key>frame</key>
                 <string>{{266,384},{114,134}}</string>
@@ -134,7 +134,7 @@
                 <key>sourceSize</key>
                 <string>{190,190}</string>
             </dict>
-            <key>Muroidea_attack0011.png</key>
+            <key>muroidea_attack0011.png</key>
             <dict>
                 <key>frame</key>
                 <string>{{360,122},{116,138}}</string>
@@ -147,7 +147,7 @@
                 <key>sourceSize</key>
                 <string>{190,190}</string>
             </dict>
-            <key>Muroidea_attack0012.png</key>
+            <key>muroidea_attack0012.png</key>
             <dict>
                 <key>frame</key>
                 <string>{{360,2},{118,140}}</string>
@@ -166,13 +166,13 @@
             <key>format</key>
             <integer>2</integer>
             <key>realTextureFileName</key>
-            <string>MuroideaAttack.png</string>
+            <string>muroideaAttack.png</string>
             <key>size</key>
             <string>{512,512}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:05d2b8e9bfa86a7eee0e0a1fc0e34f00:1/1$</string>
+            <string>$TexturePacker:SmartUpdate:9ec24644717b2ba8b98346f3ad59b797:1/1$</string>
             <key>textureFileName</key>
-            <string>MuroideaAttack.png</string>
+            <string>muroideaAttack.png</string>
         </dict>
     </dict>
 </plist>
