--- a/SwampAttack/Resources/image/PumpkinDown.plist
+++ b/SwampAttack/Resources/image/PumpkinDown.plist
@@ -4,7 +4,7 @@
     <dict>
         <key>frames</key>
         <dict>
-            <key>Pumpkin_down0001.png</key>
+            <key>pumpkin_down0001.png</key>
             <dict>
                 <key>frame</key>
                 <string>{{142,2},{78,132}}</string>
@@ -17,7 +17,7 @@
                 <key>sourceSize</key>
                 <string>{180,180}</string>
             </dict>
-            <key>Pumpkin_down0002.png</key>
+            <key>pumpkin_down0002.png</key>
             <dict>
                 <key>frame</key>
                 <string>{{2,90},{76,126}}</string>
@@ -30,7 +30,7 @@
                 <key>sourceSize</key>
                 <string>{180,180}</string>
             </dict>
-            <key>Pumpkin_down0003.png</key>
+            <key>pumpkin_down0003.png</key>
             <dict>
                 <key>frame</key>
                 <string>{{2,168},{86,124}}</string>
@@ -43,7 +43,7 @@
                 <key>sourceSize</key>
                 <string>{180,180}</string>
             </dict>
-            <key>Pumpkin_down0004.png</key>
+            <key>pumpkin_down0004.png</key>
             <dict>
                 <key>frame</key>
                 <string>{{410,2},{92,98}}</string>
@@ -56,7 +56,7 @@
                 <key>sourceSize</key>
                 <string>{180,180}</string>
             </dict>
-            <key>Pumpkin_down0005.png</key>
+            <key>pumpkin_down0005.png</key>
             <dict>
                 <key>frame</key>
                 <string>{{128,238},{106,92}}</string>
@@ -69,7 +69,7 @@
                 <key>sourceSize</key>
                 <string>{180,180}</string>
             </dict>
-            <key>Pumpkin_down0006.png</key>
+            <key>pumpkin_down0006.png</key>
             <dict>
                 <key>frame</key>
                 <string>{{256,182},{120,110}}</string>
@@ -82,7 +82,7 @@
                 <key>sourceSize</key>
                 <string>{180,180}</string>
             </dict>
-            <key>Pumpkin_down0007.png</key>
+            <key>pumpkin_down0007.png</key>
             <dict>
                 <key>frame</key>
                 <string>{{130,134},{124,102}}</string>
@@ -95,7 +95,7 @@
                 <key>sourceSize</key>
                 <string>{180,180}</string>
             </dict>
-            <key>Pumpkin_down0008.png</key>
+            <key>pumpkin_down0008.png</key>
             <dict>
                 <key>frame</key>
                 <string>{{410,96},{128,96}}</string>
@@ -108,7 +108,7 @@
                 <key>sourceSize</key>
                 <string>{180,180}</string>
             </dict>
-            <key>Pumpkin_down0009.png</key>
+            <key>pumpkin_down0009.png</key>
             <dict>
                 <key>frame</key>
                 <string>{{2,2},{138,86}}</string>
@@ -121,7 +121,7 @@
                 <key>sourceSize</key>
                 <string>{180,180}</string>
             </dict>
-            <key>Pumpkin_down0010.png</key>
+            <key>pumpkin_down0010.png</key>
             <dict>
                 <key>frame</key>
                 <string>{{276,106},{130,74}}</string>
@@ -134,7 +134,7 @@
                 <key>sourceSize</key>
                 <string>{180,180}</string>
             </dict>
-            <key>Pumpkin_down0011.png</key>
+            <key>pumpkin_down0011.png</key>
             <dict>
                 <key>frame</key>
                 <string>{{142,82},{132,50}}</string>
@@ -147,7 +147,7 @@
                 <key>sourceSize</key>
                 <string>{180,180}</string>
             </dict>
-            <key>Pumpkin_down0012.png</key>
+            <key>pumpkin_down0012.png</key>
             <dict>
                 <key>frame</key>
                 <string>{{276,54},{132,50}}</string>
@@ -160,7 +160,7 @@
                 <key>sourceSize</key>
                 <string>{180,180}</string>
             </dict>
-            <key>Pumpkin_down0013.png</key>
+            <key>pumpkin_down0013.png</key>
             <dict>
                 <key>frame</key>
                 <string>{{276,2},{132,50}}</string>
@@ -173,19 +173,32 @@
                 <key>sourceSize</key>
                 <string>{180,180}</string>
             </dict>
+            <key>pumpkin_down0014.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{142,2},{78,132}}</string>
+                <key>offset</key>
+                <string>{12,-15}</string>
+                <key>rotated</key>
+                <true/>
+                <key>sourceColorRect</key>
+                <string>{{63,39},{78,132}}</string>
+                <key>sourceSize</key>
+                <string>{180,180}</string>
+            </dict>
         </dict>
         <key>metadata</key>
         <dict>
             <key>format</key>
             <integer>2</integer>
             <key>realTextureFileName</key>
-            <string>PumpkinDown.png</string>
+            <string>pumpkinDown.png</string>
             <key>size</key>
             <string>{512,512}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:a2f4fb876e93822465b23d631ce57cc4:1/1$</string>
+            <string>$TexturePacker:SmartUpdate:ea209f0e141a2dab90f17448f0824ef4:1/1$</string>
             <key>textureFileName</key>
-            <string>PumpkinDown.png</string>
+            <string>pumpkinDown.png</string>
         </dict>
     </dict>
 </plist>
