--- a/SwampAttack/Resources/image/qiang3_2.plist
+++ b/SwampAttack/Resources/image/qiang3_2.plist
@@ -4,120 +4,107 @@
     <dict>
         <key>frames</key>
         <dict>
-            <key>reload_shotgun0001.png</key>
+            <key>run_qiang30001.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,334},{106,162}}</string>
+                <string>{{2,154},{150,144}}</string>
                 <key>offset</key>
-                <string>{-32,-4}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{5,13},{106,162}}</string>
-                <key>sourceSize</key>
-                <string>{180,180}</string>
-            </dict>
-            <key>reload_shotgun0002.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{110,330},{104,162}}</string>
-                <key>offset</key>
-                <string>{-33,-4}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{5,13},{104,162}}</string>
-                <key>sourceSize</key>
-                <string>{180,180}</string>
-            </dict>
-            <key>reload_shotgun0003.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{210,166},{100,162}}</string>
-                <key>offset</key>
-                <string>{-34,-4}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{6,13},{100,162}}</string>
-                <key>sourceSize</key>
-                <string>{180,180}</string>
-            </dict>
-            <key>reload_shotgun0004.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{380,2},{100,162}}</string>
-                <key>offset</key>
-                <string>{-34,-4}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{6,13},{100,162}}</string>
-                <key>sourceSize</key>
-                <string>{180,180}</string>
-            </dict>
-            <key>reload_shotgun0005.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{104,166},{104,162}}</string>
-                <key>offset</key>
-                <string>{-33,-4}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{5,13},{104,162}}</string>
-                <key>sourceSize</key>
-                <string>{180,180}</string>
-            </dict>
-            <key>reload_shotgun0006.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{104,2},{104,162}}</string>
-                <key>offset</key>
-                <string>{-32,-4}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{6,13},{104,162}}</string>
-                <key>sourceSize</key>
-                <string>{180,180}</string>
-            </dict>
-            <key>reload_shotgun0007.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{216,2},{102,162}}</string>
-                <key>offset</key>
-                <string>{-30,-4}</string>
+                <string>{-5,-10}</string>
                 <key>rotated</key>
                 <true/>
                 <key>sourceColorRect</key>
-                <string>{{9,13},{102,162}}</string>
+                <string>{{10,28},{150,144}}</string>
                 <key>sourceSize</key>
                 <string>{180,180}</string>
             </dict>
-            <key>reload_shotgun0008.png</key>
+            <key>run_qiang30002.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,168},{100,164}}</string>
+                <string>{{2,2},{150,150}}</string>
                 <key>offset</key>
-                <string>{-29,-3}</string>
+                <string>{-1,-9}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{11,11},{100,164}}</string>
+                <string>{{14,24},{150,150}}</string>
                 <key>sourceSize</key>
                 <string>{180,180}</string>
             </dict>
-            <key>reload_shotgun0009.png</key>
+            <key>run_qiang30003.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,2},{100,164}}</string>
+                <string>{{356,2},{126,140}}</string>
                 <key>offset</key>
-                <string>{-29,-3}</string>
+                <string>{-2,-12}</string>
+                <key>rotated</key>
+                <true/>
+                <key>sourceColorRect</key>
+                <string>{{25,32},{126,140}}</string>
+                <key>sourceSize</key>
+                <string>{180,180}</string>
+            </dict>
+            <key>run_qiang30004.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{154,2},{98,146}}</string>
+                <key>offset</key>
+                <string>{-22,-9}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{11,11},{100,164}}</string>
+                <string>{{19,26},{98,146}}</string>
+                <key>sourceSize</key>
+                <string>{180,180}</string>
+            </dict>
+            <key>run_qiang30005.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{148,154},{106,148}}</string>
+                <key>offset</key>
+                <string>{-32,-8}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{5,24},{106,148}}</string>
+                <key>sourceSize</key>
+                <string>{180,180}</string>
+            </dict>
+            <key>run_qiang30006.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{124,306},{114,148}}</string>
+                <key>offset</key>
+                <string>{-21,-9}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{12,25},{114,148}}</string>
+                <key>sourceSize</key>
+                <string>{180,180}</string>
+            </dict>
+            <key>run_qiang30007.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{254,2},{100,142}}</string>
+                <key>offset</key>
+                <string>{-18,-11}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{22,30},{100,142}}</string>
+                <key>sourceSize</key>
+                <string>{180,180}</string>
+            </dict>
+            <key>run_qiang30008.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{2,306},{120,148}}</string>
+                <key>offset</key>
+                <string>{-8,-7}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{22,23},{120,148}}</string>
                 <key>sourceSize</key>
                 <string>{180,180}</string>
             </dict>
@@ -127,13 +114,13 @@
             <key>format</key>
             <integer>2</integer>
             <key>realTextureFileName</key>
-            <string>reload.png</string>
+            <string>qiang3_2.png</string>
             <key>size</key>
             <string>{512,512}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:2dd1447ca8a36f57def579ed949db3a1:1/1$</string>
+            <string>$TexturePacker:SmartUpdate:cf211b5f761e25ab7f5d478db04a4513:1/1$</string>
             <key>textureFileName</key>
-            <string>reload.png</string>
+            <string>qiang3_2.png</string>
         </dict>
     </dict>
 </plist>
